tests/ui/const-generics/adt_const_params/const_param_ty_impl_no_structural_eq.stderr
error[E0277]: the type `CantParam` does not `#[derive(Eq)]`
  --> $DIR/const_param_ty_impl_no_structural_eq.rs:10:36
   |
LL | impl std::marker::ConstParamTy for CantParam {}
   |                                    ^^^^^^^^^ the trait `StructuralEq` is not implemented for `CantParam`
   |
note: required by a bound in `ConstParamTy`
  --> $SRC_DIR/core/src/marker.rs:LL:COL

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
